fixed contrast issue

--- a/chamber/styles/chamber-base.css
+++ b/chamber/styles/chamber-base.css
@@ -346,7 +346,7 @@ footer {
 }
 
 .c-change {
-    color: rgb(203, 1, 1);
+    color: rgb(155, 2, 2);
 }
 
 .req-text {
